Create place build

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ org.gradle.jvmargs=-Xmx1G
 
 # Mod Properties
 	base_version = 1.0.2
-	version_suffix = -BREAK
+	version_suffix = -PLACE
 	maven_group = me.logwet.challenge
 	archives_base_name = hotpotato
 
